2011-12-07  Jan Nijtmans  <nijtmans@users.sf.net>

	* tools/uniParse.tcl:    [Bug 3444754] string tolower \u01c5 is wrong
	* generic/tclUniData.c:
	* tests/utf.test:

2011-11-30  Jan Nijtmans  <nijtmans@users.sf.net>

	* library/tcltest/tcltest.tcl: [Bug 967195]: Make tcltest work
	when tclsh is compiled without using the setargv() function on mingw.
	(no need to incr the version, since 2.2.10 is never released)

2011-11-29  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/tclsh.1:  Use the same shebang comment everywhere.
	* tools/str2c
	* tools/tcltk-man2html.tcl
	* win/Makefile.in: don't install tommath_(super)?class.h
	* unix/Makefile.in: don't install directories like 8.2 and 8.3

2011-11-22  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tclWinPort.h:   [Bug 2935503] Windows: file mtime
	* win/tclWinFile.c:  sets wrong time (VS2005+ only)
	* generic/tclTest.c:

2011-11-04  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.11 TAGGED FOR RELEASE ***

	* generic/tcl.h:	Bump to 8.5.11 for release.
	* library/init.tcl:
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/configure.in:
	* README:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* changes:	Update for 8.5.11 release.

2011-10-20  Don Porter  <dgp@users.sourceforge.net>

	* library/http/http.tcl:	Bump to version 2.7.7
	* library/http/pkgIndex.tcl:
	* unix/Makefile.in:
	* win/Makefile.in:

	* changes:	Updates for 8.5.11 release.

2011-10-18  Reinhard Max  <max@suse.de>

	* library/clock.tcl (::tcl::clock::GetSystemTimeZone): Cache the
	time zone only if it was detected by one of the expensive
	methods. Otherwise after unsetting TCL_TZ or TZ the previous value
	will still be used.

2011-10-15  Venkat Iyer <venkat@comit.com>
	* library/tzdata/America/Sitka : Update to Olson's tzdata2011l
	* library/tzdata/Pacific/Fiji
	* library/tzdata/Asia/Hebron (New)

2011-10-11  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tclWinFile.c:    [Bug 2935503] Incorrect mode field